# bepository

./: .envrc  .gitignore  AGENTS.md  AI_POLICY.md  AUTHORS  CONTRIBUTING.md  Cargo.toml  INSTALL.md  INSTALLATION.md  README.md  REUSE.toml  ROADMAP.md  dprint.json  flake.nix  install.sh  justfile  setup.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
bepository-bep/: Cargo.toml  OVERVIEW.md  build.rs
bepository-bep/proto/: bep.proto
bepository-bep/src/: conflict.rs  connection.rs  device_id.rs  engine.rs  error.rs  events.rs  fault.rs  framing.rs  ids.rs  lib.rs  proto.rs  retry.rs  storage.rs  test_utils.rs  validate.rs
bepository-bep/tests/: integration.rs
bepository-cli/: Cargo.toml  OVERVIEW.md  build.rs
bepository-cli/src/: envfile.rs  main.rs  service.rs  test_env.rs  upgrade.rs
bepository-cli/src/service/: credential_wiring.rs
bepository-cli/tests/: cli_tests.rs
bepository-cli/units/: bepository-upgrade.service  bepository-upgrade.timer  bepository.service
bepository-dav/: Cargo.toml  OVERVIEW.md
bepository-dav/src/: lib.rs
bepository-e2etest/: Cargo.toml  OVERVIEW.md
bepository-e2etest/src/: lib.rs
bepository-e2etest/tests/: three_way_sync.rs
bepository-harness/: Cargo.toml  OVERVIEW.md
bepository-harness/src/: lib.rs
bepository-harness/tests/: smoke.rs  sync.rs
bepository-lock/: Cargo.toml  OVERVIEW.md  test_syntax.rs
bepository-lock/benches/: release_bench.rs
bepository-lock/src/: base32.rs  epoch.rs  guard.rs  lib.rs
bepository-lock/tests/: lock_tests.rs
bepository-storage/: CONFIG.md  Cargo.toml  OVERVIEW.md  build.rs
bepository-storage/gc-samples/: 1gib-upload.csv  1gib-upload.txt  mv-sync.csv  mv-sync.txt
bepository-storage/proto/: storage.proto
bepository-storage/src/: api.rs  block_read.rs  compaction.rs  fault.rs  fsck.rs  lib.rs  meta.rs  proto.rs  snapshot.rs  snapshot_fs.rs  stats.rs  store.rs  store_keys.rs
bepository-storage/tests/: blockseq_tests.rs  storage_tests.rs
bepository-testserver/: Cargo.toml  OVERVIEW.md
bepository-testserver/src/: lib.rs
bepository-testserver/tests/: interop.rs
bepository-tls/: Cargo.toml  OVERVIEW.md
bepository-tls/src/: lib.rs
deploy/: bepository.container  compose.yml  env.example
nix/: module.nix  release-hashes.json
nix/dev/: flake.nix
