# SPDX-FileCopyrightText: 2026 Brice Arnould
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "bepository-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test harness for running and managing Syncthing binaries"

[features]
default = ["integration"]
integration = []

[dependencies]
rand = "0.10"
rcgen = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing.workspace = true

[dev-dependencies]
bepository-bep = { path = "../bepository-bep", features = ["test-utils"] }
prost = "0.14"
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
sha2 = "0.11"
tempfile = "3"
tokio-rustls = "0.26"
tracing-subscriber.workspace = true
