# SPDX-FileCopyrightText: 2026 Brice Arnould
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "bepository-lock"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
futures.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json = "1.0"
systime = { version = "0.0.3", features = ["tokio"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }

[lints]
workspace = true
[[bench]]
name = "release_bench"
harness = false
