# SPDX-FileCopyrightText: 2026 Brice Arnould
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "bepository-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SlateDB-backed storage backend for bepository"

[dependencies]
async-stream = "0.3"
async-trait.workspace = true
base64 = "0.22"
bepository-bep.workspace = true
bepository-lock.workspace = true
bepository-tls.workspace = true
bytes.workspace = true
chrono.workspace = true
fastbloom = "0.17"
figment.workspace = true
foyer = { version = "0.22", features = ["serde", "tracing"] }
futures.workspace = true
hex = "0.4"
humantime.workspace = true
humantime-serde = "1"
linear-map.workspace = true
object_store.workspace = true
parking_lot.workspace = true
prost.workspace = true
prost-types.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde.workspace = true
sha2 = "0.11"
slatedb.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
toml = "1.1"
tracing.workspace = true
uuid.workspace = true
zeroize = { version = "1", features = ["derive"] }

[features]
test-utils = ["bepository-bep/test-utils"]

[dev-dependencies]
bepository-bep = { path = "../bepository-bep", features = ["test-utils"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
prost-build = "0.14"

[lints]
workspace = true
